# CrabIce

./: Cargo.toml  README.md  crabicesetup.iss  crabipiesetup.iss  crabipiesetup_msvc.iss
.github/workflows/: rust.yml
src/: json_highlighter.rs  main.rs
