[package]
name = "CrabIce"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "highlighter", "image", "svg", "tokio", "sipper"] }
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player.git", branch = "master" }
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["multipart", "json", "gzip", "brotli", "zstd", "deflate"] }
rfd = "0.16.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros"] }
url = "2.5.7"
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
chrono = "0.4.43"
iced_aw = { version = "0.13.0", features = ["tabs", "tab_bar"] }

# Add GStreamer crates
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
gstreamer-base = "0.23"
async-tungstenite = "0.32.1"
reqwest-websocket = "0.5.1"


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
